--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex Rodriguez - DevOps Engineer Portfolio</title>
+    <title>Vineet Dwivedi - DevOps Engineer Portfolio</title>
     <meta name="description" content="DevOps Engineer specializing in cloud infrastructure, automation, and CI/CD pipelines" />
-    <meta name="author" content="Alex Rodriguez" />
+    <meta name="author" content="Vineet Dwivedi" />
 
-    <meta property="og:title" content="Alex Rodriguez - DevOps Engineer Portfolio" />
+    <meta property="og:title" content="Vineet Dwivedi - DevOps Engineer Portfolio" />
     <meta property="og:description" content="DevOps Engineer specializing in cloud infrastructure, automation, and CI/CD pipelines" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
