--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="DevOps Engineer specializing in cloud infrastructure, automation, and CI/CD pipelines" />
     <meta name="author" content="Vineet Dwivedi" />
 
-    <meta property="og:title" content="Vineet Dwivedi - DevOps Engineer Portfolio" />
+    <meta property="og:title" content="Vineet Dwivedi - DevOps Engineer" />
     <meta property="og:description" content="DevOps Engineer specializing in cloud infrastructure, automation, and CI/CD pipelines" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
